--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -9,15 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/test.css">
 
 	<style>
-	header {
-		width:100%;
-		height:100%;
-	}
 
-	footer {
-		width:100%;
-		height:100px;
-	}
 
 
 	.banner {
@@ -360,6 +352,72 @@
 
 
 
+	/* footer */
+
+
+	.footer .section_sns {
+		width: 700px;
+		height: 100px;
+		margin: 0 auto 29px;
+		overflow: hidden;
+	}
+
+
+	.footer .item_sns {
+		float: left;
+		width: 100px;
+		height: 100px;
+		margin-left: 20px;
+		overflow: hidden;
+	}
+
+	.footer .item_sns:nth-child(1) {
+		background: url(img/footer1.jpg) no-repeat 0 0;
+	}
+	.footer .item_sns:nth-child(2) {
+		background: url(img/footer2.jpg) no-repeat 0 0;
+	}
+
+	.footer .item_sns:nth-child(3) {
+		background: url(img/footer3.jpg) no-repeat 0 0;
+	}
+	.footer .item_sns:nth-child(4) {
+		background: url(img/footer4.jpg) no-repeat 0 0;
+	}
+
+	.footer .item_sns:nth-child(5) {
+		background: url(img/footer5.jpg) no-repeat 0 0;
+	}
+	.footer .item_sns:nth-child(6) {
+		background: url(img/footer6.jpg) no-repeat 0 0;
+	}
+
+	.footer .item_sns:first-child {
+		margin-left: 0;
+	}
+
+
+	.footer .link_sns {
+		display: block;
+		height: 96px;
+		line-height: 999em;
+	}
+
+
+	.footer .section_copy {
+		font-family: Verdana, sans-serif;
+		font-size: 9px;
+		line-height: 14px;
+		color: #999;
+		text-align: center;
+	}
+
+	.footer .section_copy em {
+		padding-left: 4px;
+		font-style: normal;
+	}
+
+
 </style>
 
 
@@ -394,7 +452,7 @@
 								<a class="btn_rolling btn_prev swiper-button-disabled" href="#" role="button"><span class="blind">이전</span></a>
 								<a class="btn_rolling btn_next" href="#" role="button"><span class="blind">다음</span></a>
 
-								
+
 							</div>
 						</div>
 
@@ -409,6 +467,7 @@
 								<li class="item_sns"><a class="link_sns cafe" href="#">카페</a></li>
 								<li class="item_sns"><a class="link_sns pholar" href="#">폴라</a></li>
 							</ul>
+
 							<div class="section_copy">
 								<p>Copyright<em>©</em><a href="http://www.navercorp.com/" target="_blank"> NAVER Corp. </a> All Rights Reserved.</p>
 							</div>
@@ -417,12 +476,6 @@
 
 
 
-
-
-
-					<footer>
-
-					</footer>
 
 
 
